Update after feedback, late commit
* Add gemfiles and deploy config to git.
* Add Jekyll Picture Tag.
* Add custom sort order, with weights, of pages in site header.
* Add weigths to all top category index pages.
* Add index page for _jobs, showing all job ads.
* Add test job ad under _jobs.
* Use new responsive images for peoples pages.
* Add css for avatar portrait images.
* Show all job ads on first page, if there are any ads.
* Fix some header formats.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -45,6 +45,13 @@ img {
     vertical-align: middle;
 }
 
+/* Rounded avatar */
+#wrap{
+  text-align: center;
+}
+.avatar {
+	border-radius: 50% 50% 50% 50%;
+}
 
 
 /**
